new user action, solution fixes

--- a/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Index.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Index.cshtml
@@ -3,8 +3,8 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
         <h1>
-            @Content.Current.Title
-            <small>Control panel</small>
+            @PageContent.Current.Title
+            <small>@PageContent.Current.Subtitle</small>
         </h1>
     </section>
     <!-- Main content -->
