--- a/Ubik.UI.MVC/Areas/Backoffice/Views/Shared/_Layout.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>@Content.Current.Title</title>
+    <title>@PageContent.Current.Title</title>
     @*<title>@ViewBag.Title - My ASP.NET Application</title>*@
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
 
