--- a/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/NewRole.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/NewRole.cshtml
@@ -41,12 +41,12 @@
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <span class="input-group-addon">@Html.LabelFor(m => m.RoleName)</span>
+                                <span class="input-group-addon">@Html.LabelFor(m => m.Name)</span>
 
-                                @Html.TextBoxFor(m => m.RoleName, new { @class = "form-control" })
+                                @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
 
                             </div>
-                            @Html.ValidationMessageFor(m => m.RoleName, "", new { @class = "" })
+                            @Html.ValidationMessageFor(m => m.Name, "", new { @class = "" })
                         </div>
                         <div class="form-group">
                             @Html.Partial("~/Areas/Backoffice/Views/UserAdministration/Partials/RoleClaims.cshtml", Model)
