--- a/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Partials/RoleDetails.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Partials/RoleDetails.cshtml
@@ -1,37 +1,57 @@
 ﻿@model Ubik.Web.Auth.ViewModels.RoleViewModel
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>RoleViewModel</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.RoleId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.RoleId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.RoleId, "", new { @class = "text-danger" })
-            </div>
-        </div>
+<aside class="right-side">
+    <!-- Content Header (Page header) -->
+    <section class="content-header">
+        <h1>
+            @PageContent.Current.Title
+            <small>@PageContent.Current.Subtitle</small>
+        </h1>
+        <ol class="breadcrumb">
+            <li><a href="#"><i class="fa fa-dashboard"></i> Implement</a></li>
+            <li><a href="#">the</a></li>
+            <li class="active">breadcrump</li>
+        </ol>
+    </section>
+    <!-- Main content -->
+    <section class="content">
+        <div class="row">
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.RoleName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.RoleName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.RoleName, "", new { @class = "text-danger" })
-            </div>
-        </div>
+            <!-- form start -->
+            @using (Html.BeginForm("EditRole", "UserAdministration", FormMethod.Post, new { role = "form" }))
+            {
+                @Html.AntiForgeryToken()
+                                <!-- left column -->
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
-}
+                <div class="box-body">
+                    <div class="col-md-6">
+                        <div class="form-group hidden">
+                            @Html.LabelFor(m => m.RoleId)
+                            @Html.HiddenFor(m => m.RoleId, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(m => m.RoleId, "", new { @class = "" })
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group">
+                                <span class="input-group-addon">@Html.LabelFor(m => m.Name)</span>
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+                                @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+
+                            </div>
+                            @Html.ValidationMessageFor(m => m.Name, "", new { @class = "" })
+                        </div>
+                        <div class="form-group">
+                            @Html.Partial("~/Areas/Backoffice/Views/UserAdministration/Partials/RoleClaims.cshtml", Model)
+                        </div>
+                    </div>
+                    <div class="col-md-6"></div>
+                    <div class="box-footer col-md-12">
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </div>
+
+                </div>
+            }
+
+
+        </div>
+    </section><!-- /.content -->
+</aside>
