--- a/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Partials/RoleList.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Partials/RoleList.cshtml
@@ -20,25 +20,25 @@
         <div class="row">
 
 
-            <div class="col-md-12">
+            @*<div class="col-md-12">
                 <div class="box box-primary">
                     <div class="box-header">
                         <h3 class="box-title">Quick Example</h3>
                     </div>
                 </div>
-            </div>
+            </div>*@
 
             <div class="col-md-6">
                 <div class="box box-primary">
                     <div class="box-header">
-                        <h3 class="box-title">Bordered Table</h3>
+                        <h3 class="box-title">Roles</h3>
                     </div><!-- /.box-header -->
                     <div class="box-body">
                         <table class="table table-bordered">
                             <tr>
                                 <th style="width: 10px">#</th>
                                 <th>Name</th>
-                                <th>Name</th>
+                                
                             </tr>
                             
                             @for (var i = 0; i < Model.Count(); i++)
@@ -46,13 +46,12 @@
                                 var role = Model.ToArray()[i];
                                 <tr>
                                     <td>@((i+1).ToString("000"))</td>
-                                    <td>@role.Name</td>
-                                    <td>@role.Claims.Count().ToString()</td>
+                                    <td>@Html.ActionLink(role.Name, "Roles", "UserAdministration", new { id = role.Name, area = "Backoffice" }, null)</td>
                                 </tr>
                             }
                         </table>
                     </div><!-- /.box-body -->
-                    <div class="box-footer clearfix">
+                    @*<div class="box-footer clearfix">
                         <ul class="pagination pagination-sm no-margin pull-right">
                             <li><a href="#">&laquo;</a></li>
                             <li><a href="#">1</a></li>
@@ -60,7 +59,7 @@
                             <li><a href="#">3</a></li>
                             <li><a href="#">&raquo;</a></li>
                         </ul>
-                    </div>
+                    </div>*@
                 </div>
             </div>
             <div class="col-md-6">
