role created and updated

--- a/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/NewRole.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/NewRole.cshtml
@@ -27,7 +27,7 @@
                     </div>
                 </div>*@<!-- /.box-header -->
             <!-- form start -->
-            @using (Html.BeginForm("CreateRole", "UserAdministration", FormMethod.Post, new { role = "form" }))
+            @using (Html.BeginForm("UpdateRole", "UserAdministration", FormMethod.Post, new { role = "form" }))
             {
                 @Html.AntiForgeryToken()
                                 <!-- left column -->
