--- a/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Partials/RoleDetails.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Partials/RoleDetails.cshtml
@@ -18,7 +18,7 @@
         <div class="row">
 
             <!-- form start -->
-            @using (Html.BeginForm("EditRole", "UserAdministration", FormMethod.Post, new { role = "form" }))
+            @using (Html.BeginForm("UpdateRole", "UserAdministration", FormMethod.Post, new { role = "form" }))
             {
                 @Html.AntiForgeryToken()
                                 <!-- left column -->
