user administration ui

--- a/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Partials/RoleClaims.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Partials/RoleClaims.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Ubik.Web.Auth
-@model Ubik.Web.Auth.ViewModels.RoleViewModel
+@using Ubik.Web.Auth.ViewModels
+@model RoleViewModel
 
 @{
     var operations = new SystemClaims.Operations();
