--- a/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Partials/RoleList.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Partials/RoleList.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Ubik.Web.Auth.ViewModels
-@model IEnumerable<RoleRowViewModel>
+@model IEnumerable<RoleViewModel>
 
 
 <aside class="right-side">
