--- a/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/NewUser.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/NewUser.cshtml
@@ -1,4 +1,5 @@
-﻿@model Ubik.Web.Auth.ViewModels.UserViewModel 
+﻿@using Ubik.Web.Auth.ViewModels
+@model UserViewModel 
 <!-- Right side column. Contains the navbar and content of the page -->
 <aside class="right-side">
     <!-- Content Header (Page header) -->
@@ -7,16 +8,64 @@
             @PageContent.Current.Title
             <small>@PageContent.Current.Subtitle</small>
         </h1>
+        <ol class="breadcrumb">
+            <li><a href="#"><i class="fa fa-dashboard"></i> Implement</a></li>
+            <li><a href="#">the</a></li>
+            <li class="active">breadcrump</li>
+        </ol>
     </section>
     <!-- Main content -->
     <section class="content">
-        <p class="">This is a form for entering new user.<br/>
-        New id is @Model.UserId
-        </p>
+        <div class="row">
+
+            <!-- general form elements -->
+            @*<div class="col-md-12">
+                    <div class="box box-primary">
+                        <div class="box-header">
+                            <h3 class="box-title">Quick Example</h3>
+                        </div>
+                    </div>
+                </div>*@<!-- /.box-header -->
+            <!-- form start -->
+            @using (Html.BeginForm("UpdateUser", "UserAdministration", FormMethod.Post, new { role = "form" }))
+            {
+                @Html.AntiForgeryToken()
+                                <!-- left column -->
+
+                <div class="box-body">
+                    <div class="col-md-6">
+                        <div class="form-group hidden">
+                            @Html.LabelFor(m => m.UserId)
+                            @Html.HiddenFor(m => m.UserId, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(m => m.UserId, "", new { @class = "" })
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group">
+                                <span class="input-group-addon">@Html.LabelFor(m => m.UserName)</span>
+
+                                @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
+
+                            </div>
+                            @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "" })
+                        </div>
+                        <div class="form-group">
+                            @Html.Partial("~/Areas/Backoffice/Views/UserAdministration/Partials/UserRoles.cshtml", Model)
+                        </div>
+                    </div>
+                    <div class="col-md-6"></div>
+                    <div class="box-footer col-md-12">
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </div>
+
+                </div>
+            }
+
+
+        </div>
     </section><!-- /.content -->
 </aside><!-- /.right-side -->
 
-@Scripts.Render("~/bundles/AdminLTE_Dashboard")
+@*@Scripts.Render("~/bundles/AdminLTE_Dashboard")
 @Scripts.Render("~/bundles/raphael")
 @Scripts.Render("~/bundles/morris")
 @Scripts.Render("~/bundles/sparkline")
@@ -25,6 +74,6 @@
 @Scripts.Render("~/bundles/daterangepicker")
 @Scripts.Render("~/bundles/datepicker")
 @Scripts.Render("~/bundles/bootstrap-wysihtml5")
-@Scripts.Render("~/bundles/iCheck")
+@Scripts.Render("~/bundles/iCheck")*@
 
 
