--- a/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Partials/RoleList.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Partials/RoleList.cshtml
@@ -1,6 +1,8 @@
 ﻿@using Ubik.Web.Auth.ViewModels
 @model IEnumerable<RoleViewModel>
-
+@{
+    AddBackofficeBottom("UserAdministration/roles");
+}
 
 <aside class="right-side">
 
@@ -33,44 +35,43 @@
                     <div class="box-header">
                         <h3 class="box-title">Roles</h3>
                     </div><!-- /.box-header -->
-                    <div class="box-body">
-                        <table class="table table-bordered">
-                            <tr>
-                                <th style="width: 10px">#</th>
-                                <th>Name</th>
-                                <th></th>
-                                
-                            </tr>
-                            
-                            @for (var i = 0; i < Model.Count(); i++)
-                            {
-                                var role = Model.ToArray()[i];
+                    <div class="box-body table-responsive">
+                        <table class="table table-bordered table-hover" id="roles-table">
+                            <thead>
                                 <tr>
-                                    <td>@((i+1).ToString("000"))</td>
-                                    <td>@Html.ActionLink(role.Name, "Roles", "UserAdministration", new { id = role.Name, area = "Backoffice" }, null)</td>
-                                    <td>
-                                        @if (role.IsSytemRole)
-                                        {
-                                            <i class="fa fa-desktop" rel="tooltip" title="System Role"></i>
-                                        }
-                                        @if (role.IsPersisted)
-                                        {
-                                            <i class="fa fa-database" rel="tooltip" title="Persisted Role"></i>
-                                        }
-                                    </td>
+                                    <th style="width: 10px">#</th>
+                                    <th>Name</th>
+                                    <th></th>
+                                    <th></th>
                                 </tr>
-                            }
-                        </table>
+                            </thead>
+                            <tbody>
+                                @for (var i = 0; i < Model.Count(); i++)
+                                {
+                                    var role = Model.ToArray()[i];
+                                    <tr>
+                                        <td>@((i + 1).ToString("000"))</td>
+                                        <td>@Html.ActionLink(role.Name, "Roles", "UserAdministration", new { id = role.Name, area = "Backoffice" }, null)</td>
+                                        <td>
+                                            @if (role.IsSytemRole)
+                                            {
+                                                <i class="fa fa-desktop" rel="tooltip" title="System Role"></i>
+                                            }
+                                            @if (role.IsPersisted)
+                                            {
+                                                <i class="fa fa-database" rel="tooltip" title="Persisted Role"></i>
+
+                                            }
+                                        </td>
+                                        <td>
+                                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#copy-role-modal" data-source="@role.Name">Copy</button>
+                                        </td>
+                                    </tr>
+                                }
+                                </tbody>
+</table>
                     </div><!-- /.box-body -->
-                    @*<div class="box-footer clearfix">
-                        <ul class="pagination pagination-sm no-margin pull-right">
-                            <li><a href="#">&laquo;</a></li>
-                            <li><a href="#">1</a></li>
-                            <li><a href="#">2</a></li>
-                            <li><a href="#">3</a></li>
-                            <li><a href="#">&raquo;</a></li>
-                        </ul>
-                    </div>*@
+                    
                 </div>
             </div>
             <div class="col-md-6">
@@ -79,3 +80,52 @@
         </div>
     </section>
 </aside>
+<div class="modal fade" id="copy-role-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" >Source: <span id="roleTitleName" ></span></h4>
+            </div>
+            <div class="modal-body">
+                <!--form start-->
+@using (Html.BeginForm("CopyRole", "UserAdministration", FormMethod.Post, new { role = "form", id = "copy-role-form" }))
+{
+    @Html.AntiForgeryToken()
+    <!-- left column -->
+
+    <div class="box-body">
+     
+            <div class="form-group hidden">
+                <input type="hidden" id="Name" name="Name"/>
+            </div>
+
+
+
+            <div class="box-footer">
+                <div class="form-group">
+                    <div class="input-group">
+                        <input type="text" id="Target" name="Target" class="form-control"/>
+ 
+
+                        <div class="input-group-btn">
+                            <button type="submit" class="btn btn-primary">Copy to new Role</button>
+                        </div><!-- /btn-group -->
+
+                    </div>
+
+                </div>
+            </div>
+      
+    </div>
+}
+                <!--form end-->
+
+            </div>
+            <div class="modal-footer clearfix">
+                
+           
+            </div>
+        </div>
+    </div>
+</div>
