--- a/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/NewRole.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/NewRole.cshtml
@@ -39,7 +39,7 @@
                             @Html.HiddenFor(m => m.RoleId, new { @class = "form-control" })
                             @Html.ValidationMessageFor(m => m.RoleId, "", new { @class = "" })
                         </div>
-                        <div class="form-group">
+                        <div class="form-group control-group">
                             <div class="input-group">
                                 <span class="input-group-addon">@Html.LabelFor(m => m.Name)</span>
 
