--- a/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Roles.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/UserAdministration/Roles.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Data.Entity.Core.Common.CommandTrees.ExpressionBuilder
-@using Ubik.Web.Auth.ViewModels
+﻿@using Ubik.Web.Auth.ViewModels
 @{
     var isDetail = false;
     IEnumerable<RoleViewModel> rows;
